--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -24,3 +24,7 @@ typing_extensions==4.15.0
 tzdata==2025.3
 uvicorn==0.40.0
 xgboost==3.2.0
+sentence-transformers
+requests
+sqlalchemy
+psycopg2-binary
